# coreutils-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build  cmake_install.cmake  coreutils_cpp.cbp
lib/: config.h  configmake.h
src/: b2sum.cpp  basename.cpp  basenc.cpp  cat.cpp  chcon.cpp  chgrp.cpp  chmod.cpp  chown.cpp  chroot.cpp  cksum.cpp  comm.cpp  coreutils.cpp  cp.cpp  csplit.cpp  cut.cpp  date.cpp  dd.cpp  df.cpp  dircolors.cpp  dirname.cpp  du.cpp  echo  echo.cpp  env.cpp  expand.cpp  expr.cpp  factor.cpp  false.cpp  fmt.cpp  fold.cpp  groups.cpp  head.cpp  hostid.cpp  hostname.cpp  id.cpp  install.cpp  join.cpp  kill.cpp  link.cpp  ln.cpp  (+61 more)
src/include/: getoptions.h  globals.h
src/tests/: ut_getoptions  ut_getoptions.cpp
